Slug and author fixes

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 gingerhendrix:
   name: Gareth Andrew
   title: Chief Auto Coder
-  url: https://github.com/gingerhendrix
-  image_url: https://github.com/gingerhendrix.png
+  url: https://github.com/autocode2
+  image_url: https://github.com/autocode2.png
